--- a/style/core.scss
+++ b/style/core.scss
@@ -23,7 +23,10 @@
 @import './components/cartIcon.scss';
 @import './components/payment.scss';
 @import './components/contact.scss';
-
+@import './components/navbarMobile.scss';
+html {
+  background:$black;
+}
 #__next,
 .home {
   direction: rtl;
