--- a/style/components/cartIcon.scss
+++ b/style/components/cartIcon.scss
@@ -1,27 +1,28 @@
 .cart-icon {
   cursor: pointer;
-  position: absolute;
   color: white;
   z-index: 3;
-  bottom: 0;
-  left: 5px;
+
   font-size: 35px;
-  @include sm {
-    bottom: 8px;
+  position: relative;
+  text-align: center;
+  @include md {
+    position: absolute;
+    top: 26px;
     left: 25px;
     font-size: 45px;
   }
   span {
-    position: absolute;
     line-height: 0;
     @extend %fs12;
     top: 4px;
-    left: 10px;
+    left: 50%;
     padding: 8px 5.5px;
-    @include sm {
-        padding: 10px 5.5px;
-        top: 8px;
-        left: 25px;
+    position: absolute;
+    @include md {
+      padding: 10px 5.5px;
+      top: 8px;
+      left: 25px;
     }
     border-radius: 50%;
     background: $red;
