--- a/style/components/navbar.scss
+++ b/style/components/navbar.scss
@@ -1,4 +1,4 @@
-$menu-tabs-width: 130px;
+$menu-tabs-width: 100px;
 $menu-tabs-width-mobile: 100px;
 
 %tabs-common {
@@ -14,22 +14,10 @@ $menu-tabs-width-mobile: 100px;
   position: sticky;
   top: 0;
   z-index: 155;
-
+  background: $black;
   &[data-top="true"] {
     .ant-menu {
       box-shadow: 0px -0px 10px 0px rgba(black, 0.8);
-    }
-    &.ant-menu-sub {
-      @include sm {
-        .ant-menu-item {
-          padding: 1em 2em;
-        }
-        .ant-menu-submenu {
-          .ant-menu-submenu-title {
-            padding: 1em 2em;
-          }
-        }
-      }
     }
   }
   .ant-menu {
@@ -49,14 +37,6 @@ $menu-tabs-width-mobile: 100px;
       @include sm {
         height: 100px;
         width: 100px;
-      }
-      &[data-top="true"] {
-        @include sm {
-          transition: 0.3s;
-          height: 80px;
-          width: 80px;
-          margin: auto 0;
-        }
       }
     }
 
