--- a/style/screens/about.scss
+++ b/style/screens/about.scss
@@ -1,9 +1,38 @@
 .about {
-    header {
-        margin: 3em 0;
-        text-align: center;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+  .about-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+    background: rgba($black, 0.6);
+  }
+  header {
+    margin: 3em 0;
+    text-align: center;
+  }
+  section {
+    padding-bottom: 3em;
+    position: relative;
+    z-index: 2;
+    p{
+        text-shadow:1px 1px 1px black;
     }
-    section {
-        padding-bottom: 3em;
+  }
+  .parallaxy {
+    position: absolute;
+    height: 150%;
+    width: 100%;
+
+    div {
+      @include div-is-img("/static/image/cool_tech.jpg");
+      background-size: cover;
+      height: 150%;
+      width: 100%;
     }
+  }
 }
