--- a/style/components/footer.scss
+++ b/style/components/footer.scss
@@ -4,7 +4,7 @@
   position: relative;
   z-index: 1;
   min-height: 300px;
-  background: $black;
+  background: $darkBlack;
   color: white;
   border-top: 1px solid $darkBlack;
   @include grid(1em, initial, initial, auto, auto);
