--- a/style/components/modal.scss
+++ b/style/components/modal.scss
@@ -52,6 +52,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  border-radius:0;
   span {
     text-shadow:1px 1px 2px black;
     position: absolute;
