--- a/style/core.scss
+++ b/style/core.scss
@@ -24,6 +24,7 @@
 @import './components/payment.scss';
 @import './components/contact.scss';
 @import './components/navbarMobile.scss';
+@import './components/contactUs.scss';
 html {
   background:$black;
 }
