--- a/style/core.scss
+++ b/style/core.scss
@@ -25,6 +25,7 @@
 @import './components/contact.scss';
 @import './components/navbarMobile.scss';
 @import './components/contactUs.scss';
+@import './screens/terms.scss';
 html {
   background:$black;
 }
