--- a/style/components/footer.scss
+++ b/style/components/footer.scss
@@ -1,33 +1,13 @@
 .footer {
-  text-align: center;
-  position: relative;
-  z-index: 1;
-  background: $darkBlack;
   color: white;
-  border-top: 1px solid $darkBlack;
-  @include grid(1em, initial, initial, auto, auto);
-  .logo {
-    margin: auto;
-  }
+  border-top:2px solid $black;
   section {
-    @include grid(2em, center, center, 1fr, auto);
-    max-width: 700px;
-  }
-  // CONTACT
-  &__contact-detailes {
-    color: white;
-    .tel {
-      @include grid(1em, initial, initial, auto, auto);
-      @include md {
-        @include grid(1em, space-between, initial, auto auto, auto);
-      }
-      text-align: right;
-      @extend %fs18;
-      @extend %Varela;
-    }
+    padding: 20px 0;
+    background: #333333;
   }
   &__rights {
-    background: $darkBlack;
-    padding: 1em;
+    padding: 15px;
+    text-align: center;
+    background: $black-opacity;
   }
 }
