--- a/style/core.scss
+++ b/style/core.scss
@@ -26,6 +26,7 @@
 @import './components/navbarMobile.scss';
 @import './components/contactUs.scss';
 @import './screens/terms.scss';
+@import './screens/order-recieved.scss';
 html {
   background:$black;
 }
