--- a/style/core.scss
+++ b/style/core.scss
@@ -1,6 +1,6 @@
 @import "./styleTools.scss";
 @import "./components/slick.scss";
-// @import "./slick/slick-theme.scss";
+@import "./slick/slick-theme.scss";
 @import "./components//swiper_minified.scss";
 @import "./components/hero.scss";
 @import "./components/navbar.scss";
