--- a/style/core.scss
+++ b/style/core.scss
@@ -28,6 +28,8 @@
 @import "./components/contactUs.scss";
 @import "./screens/terms.scss";
 @import "./screens/order-recieved.scss";
+@import "./components/adsStrip.scss";
+
 html {
   background: $black;
 }
