--- a/style/core.scss
+++ b/style/core.scss
@@ -29,6 +29,8 @@
 @import "./screens/terms.scss";
 @import "./screens/order-recieved.scss";
 @import "./components/adsStrip.scss";
+@import "./components/templates/blog.scss";
+@import "./components/blogs.scss";
 
 html {
   background: $black;
